[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mqtt-randompub"
version = "0.5.0"
description = "Tool for generating MQTT messages on various topics"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Fabian Affolter", email = "fabian@affolter-engineering.ch" },
]
maintainers = [
    { name = "Fabian Affolter", email = "fabian@affolter-engineering.ch" },
]
keywords = ["MQTT", "System", "Messages"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System",
    "Topic :: System :: Networking",
]

dependencies = ["paho-mqtt"]

[project.optional-dependencies]
test = [
  "pytest>=9",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=9",
  "paho-mqtt>2.0.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest"

[project.urls]
Homepage = "https://github.com/fabaff/mqtt-randompub/"

[project.scripts]
mqtt-randompub = "mqtt_randompub.mqtt_randompub:main"

[tool.hatch.build.targets.sdist]
include = [
    "mqtt_randompub/",
    "LICENSE",
    "AUTHORS",
    "ChangeLog",
    "README.rst",
    "mqtt-randompub.example",
]
